[gd_scene load_steps=2 format=3 uid="uid://b0ahrnp60stki"]

[ext_resource type="Script" path="res://modules/inventory/inventory_slot_ui.gd" id="1_o1l45"]

[node name="InventorySlotUI" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
button_mask = 7
script = ExtResource("1_o1l45")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(58, 58)
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 62.0
offset_bottom = 62.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LabelCount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 66.0
offset_bottom = 66.0
size_flags_vertical = 1
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LabelName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 66.0
offset_bottom = 66.0
size_flags_vertical = 1
text = "1"
clip_text = true
